propuesta diseño blog

--- a/app/views/organismosAcreditadores.html
+++ b/app/views/organismosAcreditadores.html
@@ -31,7 +31,7 @@
                     <div class="testimonial-writer">
                         <div class="testimonial-writer-name">Consejo de Acreditación</div>
                         <div class="testimonial-writer-designation">en ciencias administrativas, contables y afines.</div>
-                        <a ng-href="http://caceca.org" target="_blank" class="testimonial-writer-company btn btn-primary">Visitar Sitio</a>
+                        <a ng-href="http://caceca.org" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
                     </div>
                 </div>
             </div>   
@@ -51,7 +51,7 @@
                     <div class="testimonial-writer">
                     	<div class="testimonial-writer-name">Comités Interinstitucionales</div>
                     	<div class="testimonial-writer-designation">para la evaluación de la educación superior, A.C.</div>
-                    	<a ng-href="http://www.ciees.edu.mx/" target="_blank" class="testimonial-writer-company btn btn-primary">Visitar Sitio</a>
+                    	<a ng-href="http://www.ciees.edu.mx/" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
                     </div>
                 </div>
             </div>   
@@ -71,7 +71,7 @@
                     <div class="testimonial-writer">
                     	<div class="testimonial-writer-name">Consejo para la Acreditación</div>
                     	<div class="testimonial-writer-designation">de programas educativos en humanidades.</div>
-                    	<a ng-href="http://coapehum.org" target="_blank" class="testimonial-writer-company btn btn-primary">Visitar Sitio</a>
+                    	<a ng-href="http://coapehum.org" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
                     </div>
                 </div>
             </div>   
@@ -91,7 +91,7 @@
                     <div class="testimonial-writer">
                     	<div class="testimonial-writer-name">Conapren</div>
                     	<div class="testimonial-writer-designation">conapren.</div>
-                    	<a ng-href="http://www.conapred.org.mx" target="_blank" class="testimonial-writer-company btn btn-primary">Visitar Sitio</a>
+                    	<a ng-href="http://www.conapred.org.mx" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
                     </div>
                 </div>
             </div>   
@@ -111,7 +111,7 @@
                     <div class="testimonial-writer">
                     	<div class="testimonial-writer-name">Organismo Acreditador</div>
                     	<div class="testimonial-writer-designation">reconocido por el consejo de la acreditación para la educación superior A.C.</div>
-                    	<a ng-href="http://caceb.com/" target="_blank" class="testimonial-writer-company btn btn-primary">Visitar Sitio</a>
+                    	<a ng-href="http://caceb.com/" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
                     </div>
                 </div>
             </div>   
@@ -131,7 +131,7 @@
                     <div class="testimonial-writer">
                     	<div class="testimonial-writer-name">Consejo de Acreditación</div>
                     	<div class="testimonial-writer-designation">de la enseñanza de la ingeniería A.C.</div>
-                    	<a ng-href="http://cacei.org.mx/" target="_blank" class="testimonial-writer-company btn btn-primary">Visitar Sitio</a>
+                    	<a ng-href="http://cacei.org.mx/" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
                     </div>
                 </div>
             </div>   
@@ -151,7 +151,7 @@
                     <div class="testimonial-writer">
                     	<div class="testimonial-writer-name">Consejo de Acreditación</div>
                     	<div class="testimonial-writer-designation">en ciencias administrativas, contables y afines.</div>
-                    	<a ng-href="http://www.conaic.net/" target="_blank" class="testimonial-writer-company btn btn-primary">Visitar Sitio</a>
+                    	<a ng-href="http://www.conaic.net/" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
                     </div>
                 </div>
             </div>   
@@ -171,7 +171,7 @@
                     <div class="testimonial-writer">
                     	<div class="testimonial-writer-name">Comité Mexicano de Acreditación</div>
                     	<div class="testimonial-writer-designation">de la educación agronómica A.C.</div>
-                    	<a NG-href="http://www.comeaa.org" target="_blank" class="testimonial-writer-company btn btn-primary">Visitar Sitio</a>
+                    	<a NG-href="http://www.comeaa.org" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
                     </div>
                 </div>
             </div>   
