--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -54,7 +54,7 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid red;
+  border-bottom: 1px solid transparent;
   margin-bottom: 10px;
 }
 /* Make the masthead heading the same height as the navigation */
@@ -463,13 +463,13 @@ h4.estasAquiTexto{
   background-repeat: no-repeat;
 }
 .fade-carousel .slides .slide-1 {
-  background-image: url(/images/inicio/slide/u3.jpg); 
+  background-image: url(/images/inicio/slide/u1.jpg); 
 }
 .fade-carousel .slides .slide-2 {
-  background-image: url(/images/inicio/slide/u1.jpg);
+  background-image: url(/images/inicio/slide/slide1.png);
 }
 .fade-carousel .slides .slide-3 {
-  background-image: url(/images/inicio/slide/u3.jpg);
+  background-image: url(/images/inicio/slide/slide2.png);
 }
 
 @media screen and (min-width: 980px){/*Media Queries*/
@@ -731,54 +731,41 @@ hr.lineTitleSgc{/*linea para dividir titulos principales de los contenidos*/
 ============================
 ============================
 */
+@media screen and (min-width: 768px) {
+	
+	#myModal .modal-dialog  {width:900px;}
+
+}
+#myModal .modal-dialog  {width:85%;}
 .modalBodyLogin{
   background: #272125;
-  height: 500px;
+  height: auto;
 }
 
+.modalImage{
+  border: 3px solid #bdc3c7;
+  padding: 3px;
+  max-width: 900px;
+}
+@media screen and (max-width: 900px) {
+	
+	.modalImage{
+  border: 3px solid #bdc3c7;
+  padding: 3px;
+  width: 368px;
+}
+
+}
 .loginTitle{
   color: white;
-  text-align: center;
+  text-align: justify;
 }
 
-.iconLoginInput {
-		font-size: 20px;
-		color: #fff;
-	}
-
-.loginInputSpaceTop{
-  margin-top: 50px;
-}
-.loginInputSpaceBottom{
-  margin-bottom: 10px;
-}
-
-.loginBtnSumitSide{
-  left: -23px!important;
-}
-
-.loginBtnSumit{
-  width: 100%!important;
-  height: 78px;
-  border: 2px solid #c0392b;
-  background-color: #c0392b;
-}
-.loginBtnSumit:hover{
-  background-color: #272125;
-  border: 2px solid white;
-  color: #c0392b;
-}
-
-.loginSumitGlyphicon{
-  left: -12px;
-  top: -1px;
-  font-size: 28px;
-}
-
-.loginAcceder{
-  margin-left: -35px;
+.modalText{
   color: white;
+  text-align: justify;
 }
+
 
 /*
 ============================
@@ -867,7 +854,177 @@ Acreditacion/organismos acreditadores
 }
 
 
-
+/*
+============================
+============================
+          BLOG
+============================
+============================
+*/
  
    
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+* {
+  box-sizing: border-box;
+}
+
+
+
+h1 .blog {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+}
+
+
+.card .blog {
+  float: left;
+  padding: 0 1.7rem;
+  width: 50%;
+}
+.card .menu-content {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.card .menu-content::before, .card .menu-content::after {
+  content: '';
+  display: table;
+}
+.card .menu-content::after {
+  clear: both;
+}
+.card .menu-content li {
+  display: inline-block;
+}
+.card .menu-content a {
+  color: #fff;
+}
+.card .menu-content span {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  font-size: 10px;
+  font-weight: 700;
+  font-family: 'Open Sans';
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+}
+.card .wrapper {
+  background-color: #fff;
+  min-height: 540px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
+}
+.card .wrapper:hover .data {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+.card .data {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  -webkit-transform: translateY(calc(70px + 1em));
+          transform: translateY(calc(70px + 1em));
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+.card .data .content {
+  padding: 1em;
+  position: relative;
+  z-index: 1;
+}
+.card .author {
+  font-size: 12px;
+}
+.titleBlog {
+  margin-top: 10px;
+}
+.card .text {
+  height: 70px;
+  margin: 0;
+  padding-top: 2px;
+}
+.card input[type='checkbox'] {
+  display: none;
+}
+.card input[type='checkbox']:checked + .menu-content {
+  -webkit-transform: translateY(-60px);
+          transform: translateY(-60px);
+}
+
+.example-2 .wrapper {
+  background: url(/images/inicio/slide/slide2.png) center/cover no-repeat;
+  /*background-size: 100% 100%;*/
+}
+.example-2 .wrapper:hover .menu-content span {
+  -webkit-transform: translate(-50%, -10px);
+          transform: translate(-50%, -10px);
+  opacity: 1;
+}
+.example-2 .headerBlog {
+  color: #fff;
+  padding: 1em;
+   text-shadow: 1px 1px rgba(0, 0, 0, .5);
+}
+.example-2 .headerBlog::before, .example-2 .headerBlog::after {
+  content: '';
+  display: table;
+}
+.example-2 .headerBlog::after {
+  clear: both;
+}
+.example-2 .headerBlog .date {
+  float: left;
+  font-size: 12px;
+}
+.example-2 .menu-content {
+  float: right;
+}
+.example-2 .menu-content li {
+  margin: 0 5px;
+  position: relative;
+}
+.example-2 .menu-content span {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
+}
+.example-2 .data {
+  color: #fff;
+  -webkit-transform: translateY(calc(70px + 4em));
+          transform: translateY(calc(70px + 4em));
+}
+.example-2 .title a {
+  color: #fff;
+}
+.example-2 .button {
+  display: block;
+  width: 100px;
+  margin: 2em auto 1em;
+  text-align: center;
+  font-size: 12px;
+  color: #fff;
+  line-height: 1;
+  position: relative;
+  font-weight: 700;
+}
+.example-2 .button::after {
+  content: '\2192';
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.example-2 .button:hover::after {
+  -webkit-transform: translate(5px, -50%);
+          transform: translate(5px, -50%);
+  opacity: 1;
+}
 
